# python-study

./: README.md  helloPython.py
QtProjectFileExample/: commonFunction.cpp  cond_notify.cpp  parkingbox.pro  sysconfig.pro  学习清单.txt
QtProjectFileExample/cmake_project_file/: CMakeLists.txt  daemon.sh  安装包制作工具.rar
QtProjectFileExample/cmake_project_file/ctcs/ctcs.jswf.ae/: makefile
QtProjectFileExample/cmake_project_file/jsst.pcs.network_manager/: CMakeLists.txt
QtProjectFileExample/cmake_project_file/jsst.utils/: CMakeLists.txt
QtProjectFileExample/cmake_project_file/pcs/: CMakeLists.txt
